--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 
 <body>
-    <h1>homework</h1>
+    <div class="container">
+        <header>
+            <h1>header</h1>
+        </header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">flowers</a>
+        </nav>
+        <main>
+            <img src="assets/images/flowers.jfif">
+            <img src="assets/images/flowers.jfif">
+            <img src="assets/images/flowers.jfif">
+            <img src="assets/images/flowers.jfif">
+
+        </main>
+        <footer>
+            <p>all right reserve &copy;</p>
+        </footer>
+    </div>
 </body>
 
 </html>
