--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home page</title>
+    <title>about page</title>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>Home page</h1>
+            <h1>about page</h1>
         </header>
         <nav>
             <a href="index.html">Home</a>
@@ -19,9 +19,7 @@
             <a href="about.html">flowers</a>
         </nav>
         <main>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sunt aliquam adipisci voluptatibus, ea
-                nobis recusandae ex repellat quos, porro doloremque deleniti consequuntur. Ab quasi corporis temporibus
-                quod expedita sequi?</p>
+            <p>about page</p>
         </main>
         <footer>
             <p>all right reserve &copy;</p>
